2017-12-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/index.rst: Update to 1.3.27.

	* www/Changes.rst: Add 1.3.27

	* version.sh: Update library versioning.

	* NEWS.txt: Update NEWS in preparation for releasing 1.3.27.

2017-12-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/dcm.c (DCM_ReadElement): Change size checks addressing
	CVE-2017-12140 to be based on size_t rather than magick_off_t due
	to apparent instability of the previous check across compilers.

2017-12-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/png.c (WriteOnePNGImage): Fix heap read access outside of
	allocated PixelPacket array while testing pixels for opacity.
	Resolves SourceForge issue #526 "heap-buffer-overflow in
	WriteOnePNGImage".

2017-12-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/pnm.c (WritePNMImage): Fix SourceForge bug #525
	"heap-buffer-overflow in MagickBitStreamMSBWrite".

2017-12-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/dcm.c (DCM_ReadElement): Eliminate huge memory allocation
	based on bogus length value. Addresses CVE-2017-12140. Problem was
	reported via email from Petr Gajdos on Tue, 5 Dec 2017.

2017-12-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Magick++/lib/Image.cpp (colorMap): Try to eliminate Coverity CID
	172796 "Dereference after null check" which seems to be bogus.

	* coders/png.c (WriteOnePNGImage): Fix Coverity CID 168053
	"Dereference after null check".  The check for null and the error
	report which attempted to use the null value was not needed at
	all.

	* coders/cut.c (GetCutColors): Fix Coverity CID 10181: "Null
	pointer dereferences". SetImagePixels() may return NULL.

	* coders/rgb.c (ReadRGBImage): Fix SourceForge issue #523
	"heap-buffer-overflow".  Similar issue to cmyk.c.

	* coders/gray.c (ReadGRAYImage): Fix SourceForge issue #522
	"heap-buffer-overflow".  Similar issue to cmyk.c.

	* coders/cmyk.c (ReadCMYKImage): Fix SourceForge issue #521