@@ -40,7 +40,7 @@ require AutoLoader;
     );
 
 # This version identifier must match the package version.
-$VERSION = '@PACKAGE_VERSION@';
+($VERSION) = '@PACKAGE_VERSION@' =~ /^([\d.]+)/g;
 
 sub AUTOLOAD {
     # This AUTOLOAD is used to 'autoload' constants from the constant()
