@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020171209"
-#define public MagickPackageReleaseDate "snapshot-20171209"
+#define public MagickPackageVersionAddendum ".020171213"
+#define public MagickPackageReleaseDate "snapshot-20171213"
